# daomark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: index.html
src/: editor.js  file-ops.js  help.js  i18n.js  main.js  print.js  search.js  theme.js  toolbar.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/locales/: en.json  zh.json
src/styles/: index.css
