[package]
name = "daomark"
version = "0.2.0"
description = "DaoMark — The Way of Markdown"
authors = ["DaoMark Contributors"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
